# surpriseNG

./: .gitignore  Cargo.toml  TODO.md  pyproject.toml
doc/source/: conf.py
examples/: basic_usage.py  evaluate_on_trainset.py  generate_grid_search_cv_results_example.py  grid_search_usage.py  load_custom_dataset_predefined_folds.py  load_from_dataframe.py  precision_recall_at_k.py  predict_ratings.py  similarity_conf.py  split_data_for_unbiased_estimation.py  train_test_split.py  use_cross_validation_iterators.py
examples/building_custom_algorithms/: mean_rating_user_item.py  most_basic_algorithm.py  most_basic_algorithm2.py  with_baselines_or_sim.py
examples/notebooks/: Compare.ipynb  KNNBasic_analysis.ipynb
src/: lib.rs
src/surprise/: dataset.py  reader.py  trainset.py  utils.py
src/surprise/model_selection/: search.py  split.py
src/surprise/prediction_algorithms/: algo_base.py  knns.py  predictions.py  random_pred.py
tests/: conftest.py  test_NMF.py  test_SVD.py  test_accuracy.py  test_algorithms.py  test_bsl_options.py  test_co_clustering.py  test_dataset.py  test_dump.py  test_reader.py  test_search.py  test_sim_options.py  test_similarities.py  test_validation.py  test_zero_ratings.py
