[package]
name = "surpriseNG"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py38"] }
