[project]
name = "surpriseNG" # WAS `scikit-surprise`
# Original Author
# authors = [{ name = "Nicolas Hug", email = "contact@nicolas-hug.com" }]
description = "An Experimental Partial Rewrite of scikit-surprise"
readme = "README.md"
requires-python = ">=3.8"
keywords = [ "recommender", "recommendation system" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = { "file" = "LICENSE.md" }

# Original Project URLs
# [project.urls]
# homepage = "https://surpriselib.com"
# repository = "https://github.com/NicolasHug/Surprise"

dependencies = [
  "joblib>=1.2.0",
  "numpy>=1.19.5",
  "scipy>=1.6.0",
  "pandas>=2.0.3", # TODO the missing dependency from the original?
]
dynamic = ["version", "readme"]

[dependency-groups]
dev = [
  "pytest >=8.1.1,<9"
]

[tool.maturin]
module-name = "surprise._core"
python-packages = ["surprise"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
